add images of reviews

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,7 +23,7 @@ twitter: 'Alliance_SCC'
 email: admin@AllianceSCC.com
 phone: +1 810 266 0591
 address:
-  street: 215 South Main St., 755
+  street: 215 South Main St., #755
   city: Linden
   region: MI
   postcode: '48451'
