--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: 'Alliance SciComm & Consulting, LLC' # Website name
 baseurl: 'https://alliancescc.github.io/' # Website URL
-copyright: 'Alliance SciComm & Consulting &copy; {year}' # Footer text, e.g. '© {year} Me'
+copyright: 'Alliance SciComm & Consulting, LLC &copy; {year}' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
