--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,9 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 'Alliance SciComm & Consulting, LLC' # Website name
-baseurl: 'https://alliancescc.github.io/' # Website URL
-copyright: 'Alliance SciComm & Consulting, LLC &copy; {year}' # Footer text, e.g. '© {year} Me'
+title: Alliance SciComm & Consulting, LLC # Website name
+baseURL: 'https://alliancescc.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
@@ -66,3 +65,7 @@ related:
       weight: 100
     - name: categories
       weight: 70
+security:
+  _merge: deep
+sitemap:
+  _merge: deep
