--- a/data/themes/ascc_theme.toml
+++ b/data/themes/ascc_theme.toml
@@ -2,21 +2,21 @@
 name = "ASCC_theme"
 
 # Is theme light or dark?
-light = true
+[light]
 
-# Primary
-primary = "#d40055" #goldenrod
+    # Primary
+    primary = "#d40055" #goldenrod
 
-# Menu
-menu_primary = "#fff" #white
-menu_text = "#d4aa00" #goldenrod
-menu_text_active = "#d40055" #pink
-menu_title = "#d4aa00" #goldenrod
+    # Menu
+    menu_primary = "#fff" #white
+    menu_text = "#d4aa00" #goldenrod
+    menu_text_active = "#d40055" #pink
+    menu_title = "#d4aa00" #goldenrod
 
-# Home sections
-#home_section_odd = "rgb(212,170,0)" #goldenrod
-#home_section_even = "rgb(255, 255, 255)" #white
+    # Home sections
+    #home_section_odd = "rgb(212,170,0)" #goldenrod
+    #home_section_even = "rgb(255, 255, 255)" #white
 
 [dark]
-  link = "#bbdefb"
-  link_hover = "#bbdefb"
+    link = "#bbdefb"
+    link_hover = "#bbdefb"
