--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public"]
 	path = public
-	url = https://github.com/AllianceSCC/AllianceSCC.github.io.git
+	url = git@github.com:AllianceSCC/AllianceSCC.github.io.git
